embbeded_system/SkillTest01/.metadata/.plugins/org.eclipse.cdt.ui/skilltest1.build.log
13:41:30 **** Incremental Build of configuration Debug for project skilltest1 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:62:19: error: expected ')' before string constant
   62 | sprintf(studentID, "6531347621");
      |                   ^~~~~~~~~~~~~
      |                   )
../Core/Src/main.c: In function 'HAL_GPIO_EXTI_Callback':
../Core/Src/main.c:75:52: error: 'GPIO_Pin_13' undeclared (first use in this function); did you mean 'GPIO_PIN_13'?
   75 |                         && HAL_GPIO_ReadPin(GPIOC, GPIO_Pin_13) == GPIO_PIN_RESET) {
      |                                                    ^~~~~~~~~~~
      |                                                    GPIO_PIN_13
../Core/Src/main.c:75:52: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

13:41:30 Build Failed. 3 errors, 0 warnings. (took 324ms)

